--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "ts-node scripts/build.ts && tsc-alias",
-    "start:dev": "nodemon",
-    "start:prod": "node dist/index.js"
+    "build": "ts-node scripts/build.ts --production && tsc-alias && cp -r prisma dist && cp package.json dist",
+    "watch": "ts-node scripts/watch.ts",
+    "add_endpoint": "ts-node ./scripts/add-endpoint.ts",
+    "add_model": "ts-node ./scripts/generate-model.ts"
   },
   "keywords": [],
   "author": "",
@@ -15,10 +16,13 @@
   "devDependencies": {
     "@types/express": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.15.30",
     "@types/nodemailer": "^6.4.17",
     "@types/speakeasy": "^2.0.10",
     "@types/winston": "^2.4.4",
+    "@typescript-eslint/parser": "^8.35.1",
+    "@typescript-eslint/types": "^8.35.1",
     "concurrently": "^9.2.0",
     "express": "^5.1.0",
     "prisma": "^6.10.0",
@@ -27,17 +31,20 @@
   },
   "dependencies": {
     "@prisma/client": "^6.10.1",
-    "@typescript-eslint/parser": "^8.35.1",
-    "@typescript-eslint/types": "^8.35.1",
+    "bcryptjs": "^3.0.2",
     "chalk": "^5.4.1",
+    "cloudinary": "^1.41.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "inversify": "^7.5.2",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "mysql2": "^3.14.1",
     "nodemailer": "^7.0.4",
     "nodemon": "^3.1.10",
     "redoc-express": "^2.1.0",
     "reflect-metadata": "^0.2.2",
+    "socket.io": "^4.8.1",
     "speakeasy": "^2.0.0",
     "ts-to-zod": "^3.15.0",
     "tsc-alias": "^1.8.16",
